--- a/LargeSystemsMiniProject/pom.xml
+++ b/LargeSystemsMiniProject/pom.xml
@@ -84,7 +84,13 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
-         <!--Spring security-->
+        <!-- GSON -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <!--Spring security-->
         <!--<dependency>-->
             <!--<groupId>org.springframework.security</groupId>-->
             <!--<artifactId>spring-security-web</artifactId>-->
