--- a/LargeSystemsMiniProject/pom.xml
+++ b/LargeSystemsMiniProject/pom.xml
@@ -32,7 +32,7 @@
         <java.version>1.8</java.version>
         <spring.version>4.1.6.RELEASE</spring.version>
         <spring.security.version>4.0.1.RELEASE</spring.security.version>
-        <hibernate.version>4.3.9.FINAL</hibernate.version>
+        <hibernate.version>4.3.9.Final</hibernate.version>
     </properties>
 
     <dependencies>
