added map controller

--- a/LargeSystemsMiniProject - Client/pom.xml
+++ b/LargeSystemsMiniProject - Client/pom.xml
@@ -27,6 +27,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.lynden</groupId>
+            <artifactId>GMapsFX</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
     <build>
