added some diagrams

--- a/LargeSystemsMiniProject/src/main/resources/application.properties
+++ b/LargeSystemsMiniProject/src/main/resources/application.properties
@@ -4,3 +4,4 @@ jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/Large_Systems_MiniProject
 jdbc.username=postgres
 jdbc.password=admin
+server.port = 8182
